Automatically backed up by Learn

--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -8,6 +8,6 @@
   <body id="page-top">
     <h1>Welcome to FlatBank</h1>
     <h3>Log In Please</h3>
-    Username: <input type="text" name="username">
+    Username: <input type="text" name="username" id="username">
   </body>
 </html>
