Automatically backed up by Learn

--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -10,5 +10,6 @@
     <h3>Log In Please</h3>
     <form>
     Username: <input type="text" name="username" id="username">
+  </form>
   </body>
 </html>
