Automatically backed up by Learn

--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -10,6 +10,8 @@
     <h3>Log In Please</h3>
     <form>
     Username: <input type="text" name="username" id="username">
-  </form>
+    <br>
+    Password: <input type="text" name="password" id="username">
+    </form>
   </body>
 </html>
