Automatically backed up by Learn

--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -11,7 +11,7 @@
     <form>
     Username: <input type="text" name="username" id="username">
     <br>
-    Password: <input type="text" name="password" id="username">
+    Password: <input type="text" name="password" id="<input type="text" name="username" id="username">">
     </form>
   </body>
 </html>
