--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -8,7 +8,7 @@
   <body id="page-top">
     <h1>Welcome to FlatBank</h1>
     <h3>Log In Please</h3>
-    <form>
+    <form method="post" action="/">
     Username: <input type="text" name="username" id="username">
     <br>
     Password: <input type="text" name="password" id="password">
