Automatically backed up by Learn

--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -12,6 +12,7 @@
     Username: <input type="text" name="username" id="username">
     <br>
     Password: <input type="text" name="password" id="password">
+    <input type="submit" value="Log In">
     </form>
   </body>
 </html>
