Automatically backed up by Learn

--- a/app/views/account.erb
+++ b/app/views/account.erb
@@ -7,6 +7,6 @@
   </head>
   <body id="page-top">
     Your balance is: <%= @user.balance %>
-
+    <input type="submit" value="">
   </body>
 </html>
