--- a/app/views/account.erb
+++ b/app/views/account.erb
@@ -7,6 +7,7 @@
   </head>
   <body id="page-top">
     Your balance is: <%= @user.balance %>
-    <input type="submit" value="">
+    <form method="post" action="/logout">
+    <input type="submit" value="Log Out">
   </body>
 </html>
