--- a/app/views/account.erb
+++ b/app/views/account.erb
@@ -7,7 +7,7 @@
   </head>
   <body id="page-top">
     Your balance is: <%= @user.balance %>
-    <>
+    <a href="/logout">Log Out</a>
 
   </body>
 </html>
