Automatically backed up by Learn

--- a/app/views/account.erb
+++ b/app/views/account.erb
@@ -6,6 +6,8 @@
     <link rel="stylesheet" href="stylesheets/bootstrap.css" type="text/css">
   </head>
   <body id="page-top">
+    if User.is_logged_in?
+      
     Your balance is: <%= @user.balance %>
     <a href="/logout">Log Out</a>
 
