Automatically backed up by Learn

--- a/app/views/account.erb
+++ b/app/views/account.erb
@@ -7,7 +7,11 @@
   </head>
   <body id="page-top">
     <% if User.is_logged_in? %>
-      <%= Your balance is: #{@user.balance} %>
+      <%= Account Name: User.current_user.Name %>
+      <br>
+      <%=
+      Your balance is: @user.balance %>
+      else
     <a href="/logout">Log Out</a>
 
   </body>
