Automatically backed up by Learn

--- a/app/views/account.erb
+++ b/app/views/account.erb
@@ -11,7 +11,7 @@
       <%= "Your Balance: " @user.balance %>
       <% else >
       <%= "Back to Home page" User.current_user.Name %>
-    <a href="/home">Log Out</a>
+    <a href="/">Log Out</a>
 
   </body>
 </html>
