Automatically backed up by Learn

--- a/app/views/account.erb
+++ b/app/views/account.erb
@@ -10,7 +10,7 @@
       <%= "Account Name: " User.current_user.Name %>
       <%= "Your Balance: " @user.balance %>
       <% else >
-      <%= "Back to Home page" User.current_user.Name %>
+      <%= "Back to Home page" %>
     <a href="/">Log Out</a>
 
   </body>
