Automatically backed up by Learn

--- a/app/views/account.erb
+++ b/app/views/account.erb
@@ -11,7 +11,7 @@
       <%= "Your Balance: " @user.balance %>
       <% else >
       <%= "Back to Home page" %>
-    <a href="/">Log Out</a>
-<% end >
+      <a href="/">Home</a>
+      <% end >
   </body>
 </html>
