--- a/app/views/account.erb
+++ b/app/views/account.erb
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="stylesheets/bootstrap.css" type="text/css">
   </head>
   <body id="page-top">
-    <% if User.is_logged_in? %>
+    <% if Helper.is_logged_in? %>
       <%= "Account Name: " User.current_user.Name %>
       <%= "Your Balance: " @user.balance %>
       <% else >
