--- a/app/views/account.erb
+++ b/app/views/account.erb
@@ -7,7 +7,7 @@
   </head>
   <body id="page-top">
     <% if Helpers.is_logged_in?(session) %>
-      <%= "Account Name: " User.current_user.Name %>
+      <%= "Account Name: " User.current_user(session).Name %>
       <%= "Your Balance: " @user.balance %>
       <% else >
       <%= "Back to Home page" %>
