--- a/app/views/account.erb
+++ b/app/views/account.erb
@@ -8,7 +8,7 @@
   <body id="page-top">
     <% if Helpers.is_logged_in?(session) %>
       <%= "Account Name: " User.current_user(session).name %>
-      <%= "Your Balance: " @user.balance %>
+      <%= "Your Balance: " User.current_user(session).balance %>
       <% else >
       <%= "Back to Home page" %>
       <a href="/">Home</a>
