Automatically backed up by Learn

--- a/app/views/account.erb
+++ b/app/views/account.erb
@@ -10,8 +10,7 @@
       <%= "Account Name: " User.current_user(session).name %>
       <%= "Your Balance: " User.current_user(session).balance %>
       <% else >
-      <%= "Back to Home page" %>
-      <a href="/">Home</a>
+      <a href="/">Back to Home page</a>
       <% end >
   </body>
 </html>
