--- a/app/views/account.erb
+++ b/app/views/account.erb
@@ -7,7 +7,7 @@
   </head>
   <body id="page-top">
     <% if Helpers.is_logged_in?(session) %>
-      <%= "Account Name: " User.current_user(session).name %>
+      <%= "Account Name: " Helpers.current_user(session).name %>
       <%= "Your Balance: " User.current_user(session).balance %>
       <% else >
       <a href="/">Back to Home page</a>
