--- a/app/views/account.erb
+++ b/app/views/account.erb
@@ -8,7 +8,7 @@
   <body id="page-top">
     <% if Helpers.is_logged_in?(session) %>
       <%= "Account Name: " Helpers.current_user(session).name %>
-      <%= "Your Balance: " User.current_user(session).balance %>
+      <%= "Your Balance: " Helpers.current_user(session).balance %>
       <% else >
       <a href="/">Back to Home page</a>
       <% end >
