--- a/app/views/account.erb
+++ b/app/views/account.erb
@@ -7,8 +7,8 @@
   </head>
   <body id="page-top">
     <% if Helpers.is_logged_in?(session) %>
-      <%= "Account Name: " Helpers.current_user(session).name %>
-      <%= "Your Balance: " Helpers.current_user(session).balance %>
+      Account Name: <%= Helpers.current_user(session).name %>
+      Your Balance: <%= Helpers.current_user(session).balance %>
       <% else %>
       <a href="/">Back to Home page</a>
       <% end %>
