--- a/app/views/account.erb
+++ b/app/views/account.erb
@@ -7,7 +7,7 @@
   </head>
   <body id="page-top">
     <% if Helpers.is_logged_in?(session) %>
-      Account Name: <%= Helpers.current_user(session).username %>
+      Welcome <%= Helpers.current_user(session).username %>
       Your Balance: <%= Helpers.current_user(session).balance %>
       <% else %>
       <a href="/">Back to Home page</a>
