Automatically backed up by Learn

--- a/app/views/account.erb
+++ b/app/views/account.erb
@@ -11,6 +11,7 @@
       Your Balance: <%= Helpers.current_user(session).balance %>
       <% else %>
       <a href="/">Back to Home page</a>
+      <a href="/logout">Log Out</a>
       <% end %>
   </body>
 </html>
