Automatically backed up by Learn

--- a/app/views/account.erb
+++ b/app/views/account.erb
@@ -10,8 +10,7 @@
       Welcome <%= Helpers.current_user(session).username %>
       Your Balance: <%= Helpers.current_user(session).balance %>
       <% else %>
-      <a href="/">Back to Home page</a>
-      <a href="/logout">Log Out</a>
+      You Must <a href="/">Log In</a> to View Your Balance
       <% end %>
   </body>
 </html>
