--- a/app/views/account.erb
+++ b/app/views/account.erb
@@ -9,6 +9,7 @@
     <% if Helpers.is_logged_in?(session) %>
       <h1>Welcome <%= Helpers.current_user(session).username %></h1>
       Your Balance: <%= Helpers.current_user(session).balance %>
+      <a href="/logout">Log Out</a>
       <% else %>
       You Must <a href="/">Log In</a> to View Your Balance
       <% end %>
